# api-nexus

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-06-21-codex-responses-api.md  2026-06-21-fusion-web-tools-and-on-demand.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agentic.rs  anthropic.rs  commands.rs  config.rs  fusion.rs  main.rs  proxy.rs  responses.rs  security.rs  storage.rs  web_tools.rs
src/components/: Layout.tsx  Sidebar.tsx
src/contexts/: ThemeContext.tsx
src/pages/: Dashboard.tsx  Fusion.tsx  Logs.test.ts  Logs.tsx  Models.test.ts  Models.tsx  Playground.tsx  Providers.tsx  Settings.tsx
src/test/: tauri-config.test.ts
tests/: app.spec.ts
